# agas

./: README.md  output.rdf  output_file.owl  output_file.ttl  pyproject.toml
Protege-5.6.4-linux/Protege-5.6.4/: run.sh
agas/: .env  __init__.py  cli.py  dsl_parser.py  flask_app.py
agas/static/: style.css
agas/static/graphs/: ontology_graph_filtered  ontology_graph_full
agas/static/images/ontology/: Untitled Diagram (1).drawio  Untitled Diagram.drawio
agas/static/js/: main.js
agas/static/orders/: poke_015.json
agas/templates/: AGAS.html  LOGIN.html  about.html  ask.html  bq.html  contacts.html  not_allowed_popup.html  ontology.html  results.html
agas/templates/jinjaT/: blog.html  class.html  confirm_edit.html  edit_individual.html  home.html  homeEXP.html  individual.html  indivsT.html  not_found.html  property.html  results.html  typeA.html  version.html  versions.html
results/: results.json  resultsBQ.json
tests/: config.txt  config2.txt  configA.txt  configB.txt
tests/ontos/typeA/: pokemon.ttl
tests/ontos/typeB/: cwr.owl  cwr_ttl_file.ttl
tests/ontos/typeC/C1/onto_popul/: deities.json  greekDeities.ttl  popula.py
tests/ontos/typeC/C1/ontos_final/: greek_deities_ontology_complete.ttl  jcr-final.ttl
tests/ontos/typeC/C2/: ontology_population.ttl  supernatural.ttl
tests/ontos/typeC/C2/buildOnto/: bookAll.json  bookAll1.json  bookAll2.json  onto.py  popula.py  typec2.ttl
